Fix spacing in myNiwa and about error

--- a/src/pages/MyNiwa/MyNiwa.css
+++ b/src/pages/MyNiwa/MyNiwa.css
@@ -14,4 +14,5 @@
 .garden-card {
   margin: auto;
   margin-top: 2%;
+  margin-bottom: 1.5rem;
 }
